# Music-Integrations

./: CMakeLists.txt  CMakeSettings.json  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: build.yml
include/: httplib.h
src/: main.cpp
src/managers/: AdvancedLabelManager.cpp  AdvancedLabelManager.hpp  MusicOverlayManager.cpp  PlaybackManager.cpp  PlaybackManager.hpp  httpManager.cpp  httpManager.hpp
src/managers/keybindManager/: KeyPickerPopup.hpp  keybindManager.cpp  keybindManager.hpp
src/server/: CMakeLists.txt  server.cpp  server.h
src/ui/: linkSpotify.hpp
